# Jovi_MIDI

./: .gitignore  README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt
core/: __init__.py  midi.py
web/: node_midi_reader.js  util_field.js
