[project]
name = "jovi_midi"
description = "Read and Process data from MIDI devices inside of ComfyUI."
version = "1.0.1"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "aenum",
    "loguru",
    "mido[ports-rtmidi]",
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovi_MIDI"
Documentation = "https://github.com/Amorano/Jovi_MIDI/wiki"
Repository = "https://github.com/Amorano/Jovi_MIDI"
Issues = "https://github.com/Amorano/Jovi_MIDI/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovi MIDI"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jovi_midi.png"
